fix(filters): add overflow management to prevent user to be able to click invisible li items

--- a/style.css
+++ b/style.css
@@ -124,6 +124,14 @@ main {
   transition: max-height 350ms cubic-bezier(0, 0.75, 0.49, 0.91);
 }
 
+.btn.btn {
+  overflow: hidden;
+}
+
+.btn.btn.selected {
+  overflow: initial;
+}
+
 .btn.btn.selected .filter-list__items {
   display: grid;
   max-height: 400px;
@@ -154,6 +162,7 @@ main {
 
 .btn.selected {
   max-width: 55%;
+  /* overflow: auto; */
 }
 
 .btn.ingredients-filter {
@@ -161,7 +170,6 @@ main {
 }
 
 .btn.ingredients-filter:hover {
-  /* background-color: #2565c5; */
   background-color: #3282f7;
 }
 
@@ -170,7 +178,6 @@ main {
 }
 
 .btn.appliances-filter:hover {
-  /* background-color: #5cbe90; */
   background-color: #68d9a4;
 }
 
@@ -179,7 +186,6 @@ main {
 }
 
 .btn.ustensils-filter:hover {
-  /* background-color: #c35145; */
   background-color: #ed6454;
 }
 
